fix overlaping mobile view

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,6 +62,7 @@
   left: 0;
   transform: translateY(-50%);
   opacity: 0.1;
+  width: 100vw;
   z-index: -1;
 }
 .bg_webicon2 {
@@ -73,6 +74,10 @@
   z-index: 0;
 }
 
+.bg_webicon img {
+  object-fit: cover;
+  width: 100%;
+}
 .service_box {
   box-shadow: 0 0 5px #0000001e;
   background-color: white;
