--- a/client/src/portfolioContainer/navbar/navbar.css
+++ b/client/src/portfolioContainer/navbar/navbar.css
@@ -9,6 +9,7 @@
   min-height: 60px;
   display: flex;
   flex-direction: column;
+  width: 100vw;
   left: 0;
   top: 0;
   z-index: 1000;
@@ -56,7 +57,9 @@
   .nav_items {
     display: none;
   }
-
+  .navbar {
+    padding: 20px 10px !important;
+  }
   .nav_mobile {
     width: 100%;
     height: 0;
